# ash-py-agent-orchestration

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.md
.claude/skills/ironbridge-dev/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  15dccfc06104_add_app_role.py  4035fd03e234_add_agent_run_events.py  a1b2c3d4e5f6_tenant_scope_agent_run_events.py  b1c2d3e4f5a6_channels.py  d1e2f3a4b5c6_drop_agent_run_events_unique.py
docs/: blog_post.md  blog_post.txt  decisions.md  design-principles.md  framework.md  reddit_post.md
docs/guide/: actor.md  cli.md  concepts.md  extensions.md  getting-started.md  index.md  modules.md  policies-and-guards.md  relationships.md  resources.md  steps.md  subscriptions.md  testing.md  workflows.md
examples/: demo_app.py
frontend/: index.html
services/channels/adapters/: base.py  cli.py  discord_adapter.py  web.py  webhook.py
src/ironbridge/: __init__.py  main.py
src/ironbridge/agent_sdk/: __init__.py  server.py  tools.py
src/ironbridge/agents/: hitl_test_agent.py  streaming_weather_agent.py  stub.py  weather_agent.py
src/ironbridge/cli/: generators.py  main.py  new.py
src/ironbridge/controllers/: thread_controller.py
src/ironbridge_web/: __init__.py  app.py
tests/: channel_adapter_stub.py  conftest.py
tests/integration/: test_dbos_workflow.py  test_durability.py  test_e2e.py  test_idempotency.py  test_observable.py  test_ordering.py  test_recording_adapter.py  test_stub_agent.py  test_tenant_isolation.py
(+99 files in other folders)
