[project]
name = "ironbridge"
version = "0.1.0"
description = "Multitenant AI agent orchestration platform"
requires-python = ">=3.12"
dependencies = [
    "restate-sdk>=0.18.0",
    "crewai>=0.130.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "cuid2>=2.0.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "fastapi>=0.111.0",
    "pusher>=3.0.0",
    "uvicorn>=0.30.0",
    "hypercorn>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ironbridge", "services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E731"]  # allow lambda assignments for _utcnow patterns

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
markers = [
    "integration: requires running stack (docker compose up)",
]
